--- a/about.html
+++ b/about.html
@@ -15,6 +15,22 @@ header-img: "img/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
+    <div class="
+                col-lg-8 col-lg-offset-2
+                col-md-10 col-md-offset-1
+                post-container">
+    <blockquote>
+  <p>写写代码，感受生活<br />
+离开世界之前，一切都是过程</p>
+</blockquote>
+</dir>
+
+<p>Hey,我是李航。东北大学秦皇岛分校的大二学生。平常喜欢读一些关于技术的书，
+谨以此博客记录学习生活中的点滴体验，希望与大家共同学习进步。</p>
+<div class="
+                col-lg-8 col-lg-offset-2
+                col-md-10 col-md-offset-1
+                post-container">
     
 </div>
 
@@ -73,7 +89,6 @@ header-img: "img/about-bg.jpg"
     {% if site.duoshuo_username == "huxblog" %}
         data-thread-id="1187623191091085319"
     {% else %}
-    <!-- U can just use this key generated to index comments at page about -->
         data-thread-key="{{site.duoshuo_username}}/about"
     {% endif %}
 
