--- a/about.html
+++ b/about.html
@@ -15,13 +15,21 @@ header-img: "img/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote>
-  <p>写写代码，感受生活<br />
+<blockquote>
+<p>写写代码，感受生活<br>
 离开世界之前，一切都是过程</p>
 </blockquote>
-
 <p>Hey,我是李航。东北大学秦皇岛分校的大二学生。平常喜欢读一些关于技术的书，
 谨以此博客记录学习生活中的点滴体验，希望与大家共同学习进步。</p>
+<p>邮箱：<a href="mailto:fightinghang@live.cn">fightinghang@live.cn</a></p>
+<p>GitHub：<a href="https://github.com/hanglegehang">https://github.com/hanglegehang</a></p>
+<hr>
+<blockquote>
+<p>更新于2017年11月03日20:33:27</p>
+</blockquote>
+<p>一转眼我已经到了大三，时光荏苒，我在成长。我认为自今年五月份到现在我的成长是最快的。从之前自己写小项目练手，到现在可以熟练运用ssm、可以熟练配置Linux上的web环境。可以运用jenkins部署项目。</p>
+<p>在画扇公司实习开发聊呗App的这几个月经历了一次完整的客户端与服务端、Web端与服务端交互开发。在这个过程中每天都在学习新的东西。正是每天的学习，现在才能得心应手的写接下来的智能家庭锁项目。</p>
+<p>下一步：学习设计模式，提高代码质量，继续学习多线程和Jvm虚拟机。</p>
 </div>
 <!-- English Version -->
 <div class="en post-container">
